--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,15 +7,42 @@
     "wdth" 100;
 }
 /* shared styles */
-.logoR{
+.text-primary{
     color:#FD6E0A;
 }
-
+.dark-2{
+    color:#474747;
+}
+.btn{
+    background-color: #FD6E0A;
+    color:#fff;
+    font-size:20px;
+    font-weight: 700;
+    padding: 18px 35px;
+    border-radius: 5px;
+    border:none;
+}
 /* nav styles*/
 nav{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin:0 200px;
 }
 .nav-title{
     font-weight:800;
     font-size: 45px;
+}
+nav ul{
+    display: flex;
+    align-items: center;
+}
+nav ul li{
+    list-style: none;
+    margin-right: 50px;
+}
+nav li a{
+    text-decoration: none;
+    font-size: 20px;
+    color: #474747;
 }
