--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -46,3 +46,28 @@ nav li a{
     font-size: 20px;
     color: #474747;
 }
+header{
+    background-image: url("../images/developer.png"),url("../images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+}
+/* banner styles */
+.banner-greetings{
+    font-size:45px;
+    font-weight:600;
+}
+.banner-title{
+    font-weight: 700;
+    font-size: 85px;
+}
+.profile-pic{
+    width: 580px;
+}
+.banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px 0 230px;
+}
+.banner-content{
+    max-width:580px;
+}
