--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,9 @@
     "wdth" 100;
 }
 /* shared styles */
+.second-bg{
+    background-color: #fff8f3;
+}
 .text-primary{
     color:#FD6E0A;
 }
@@ -21,6 +24,15 @@
     padding: 18px 35px;
     border-radius: 5px;
     border:none;
+}
+.section-title{
+    font-size: 35px;
+    font-weight:700;
+    color:#181818;
+}
+.section-desc{
+    font-size: 18px;
+    color: #757575;
 }
 /* nav styles*/
 nav{
